finishUpdate